docs(perf): verify mixed throughput plateau at fixed 256 inflight